<resources>
        <!-- Info generali -->
    <string name="app_name">KGame</string>
    <string name="family_name">Famiglia Rossi</string>
    <string name="nickname">Rossella73</string>
    <string name="leaderboard">Classifica</string>
    <string name="open">open</string>
    <string name="close">close</string>


       <!-- navigazione -->
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Impostazioni</string>
    <string name="menu_home">Home</string>
    <string name="menu_account">Profilo</string>
    <string name="menu_calendar">Calendario</string>
    <string name="menu_grow">La tua crescita</string>

    <!--profile frag-->

    <string name="cambia">Cambia foto profilo</string>
    <string name="cambia_pedina">Cambia pedina</string>
    <string name="cambia_nickname">Cambia nickname</string>
    <string name="cambia_nomeFamiglia">Cambia nome famiglia</string>
    <string name="componenti">Componenti famiglia</string>


    <!--setUpProfile frag-->
    <string name="create_family">+ Crea una famiglia</string>
    <string name="configure_profile">Configura il tuo profilo</string>
    <string name="welcome">Benvenuto</string>
    <string name="add_pic_to_profile">Aggiungi una foto al tuo profilo</string>
    <string name="join_family">UNISCITI AD UNA FAMIGLIA</string>

    <!-- calendario -->
    <string name="evento">PROPONI NUOVO EVENTO</string>
    <string name="impegno">AGGIUNGI UN TUO IMPEGNO</string>
    <string name="sincronizza">SINCRONIZZA CON GOOGLE</string>
    <string name="msganteprimanuovieventi">Visualizza tutti</string>

    <!-- Login/register -->
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="conferma">conferma</string>
    <string name="Ric">Ricordami</string>
    <string name="newUser">Nuovo utente?</string>
    <string name="register">Registrati</string>
    <string name="username">username</string>
    <string name="add_user_photo">Aggiungi una foto al tuo profilo</string>
    <string name="crea_Fam">+ Crea una famiglia</string>
    <string name="join_Fam">UNISCITI A UNA FAMIGLIA</string>
    <string name="fam_code">codice famiglia</string>
  
        <!-- impostazioni grafico -->
    <string name="weight_settings">Ultima pesata:</string>
    <string name="ob_settings">IMPOSTA OBIETTIVO</string>
    <string name="clock_settings">IMPOSTA SVEGLIA GIORNALIERA</string>
  
        <!-- fragment grow -->
    <string name="question_message_weight_ok">Obiettivo aggiunto correttamente</string>
    <string name="question_title">Imposta sveglia</string>
    <string name="question_message">Sei sicuro di voler impostare la sveglia alle </string>
    <string name="question_title_obj_ok">Aggiungi obiettivo</string>
    <string name="question_message_obj">Vuoi davvero impostare il tuo nuovo obiettivo di peso su </string>
    <string name="ricorda">Ricorda: è meglio pesarsi sempre allo stesso orario, preferibilmente al mattino o prima dei pasti!</string>

        <!-- home -->
    <string name="question_title_weight">Aggiungi peso</string>
    <string name="question_title_clock">Imposta sveglia</string>
    <string name="question_title_weight_ok">Peso aggiunto correttamente</string>
    <string name="question_message_weight">Sei salito sopra la bilancia e vuoi aggiungere il tuo peso? </string>
    <string name="question_message_obj_ok">Hai aggiunto correttamente il peso di</string>

        <!-- match management-->
    <string name="start_match">Avvia</string>
    <string name="join_match">Unisciti</string>



    <!-- account -->
    <string name="saveUpdates">Salva modifiche</string>
    <string name="discardUpdates">Annulla modifiche</string>


            <!-- varie -->

    <string name="titolo">titolo</string>
    <string name="luogo">luogo</string>
    <string name="descrizione">descrizione</string>
    <string name="crea">Crea evento</string>
    <string name="aggiungi">Aggiungi impegno</string>
    <string name="aggiungievento">Aggiungi evento famiglia</string>
    <string name="data">data</string>
    <string name="orainizio">orario inizio</string>
    <string name="durata">durata</string>
  
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="cancel">Annulla</string>
    <string name="ok">OK</string>
    <string name="or">oppure</string>
    <string name="confirm">Conferma</string>






    <!-- unità di misura -->

    <string name="kgq">kg?</string>
    <string name="kg">kg.</string>

        <!--months of year-->
    <string name="gen"> GEN</string>
    <string name="feb"> FEB</string>
    <string name="mar"> MAR</string>
    <string name="apr"> APR</string>
    <string name="mag"> MAG</string>
    <string name="giu"> GIU</string>
    <string name="lug"> LUG</string>
    <string name="ago"> AGO</string>
    <string name="set"> SET</string>
    <string name="ott"> OTT</string>
    <string name="nov"> NOV</string>
    <string name="dic"> DIC</string>


    <!--System messages-->
        <!--Permission alert dialog-->
        <string name="permession_denied">Permesso negato</string>
        <string name="impostazioni_app">Il permesso per accedere alla Galleria è negato. Per favore consenti il permesso dalle Impostazioni dell\'App.</string>
        <string name="butt_imp_app">Impostazioni dell\'App</string>

        <!--Toasts-->
        <string name="req_mail">Inserisci un\'email per procedere</string>
        <string name="req_pw">Inserisci una password per procedere</string>
        <string name="req_pw2">Conferma la password per procedere</string>

        <!--Log in-->
        <string name="succ_login">Hai effettuato il login!</string>

        <!--Sign in-->
        <string name="succ_signin">Conferma il tuo account! Ti abbiamo mandato una mail.</string>
        <string name="fail_signin">Non hai effettuato il login!</string>

        <!--Nickname update-->
        <string name="succ_newNN">Nickname aggiornato</string>
        <string name="fail_newNN">Il nickname non è stato aggiornato correttamente</string>

        <string name="succ_newNNorPP">Nickname e/o pedina aggiornati</string>
        <string name="fail_newNNorPP">Il nickname e la pedina non sono stati aggiornati correttamente</string>

        <string name="succ_update">Dati aggiornati correttamente</string>
        <string name="fail_update">I dati non sono stati aggiornati correttamente</string>

        <string name="succ_delete">Operazione svolta correttamente</string>
        <string name="fail_delete">L\'operazione non è svolta correttamente</string>

        <string name="req_doc">Errore: il documento non esiste.</string>
        <string name="succ_newPawn">Pedina aggiornata</string>
        <string name="fail_newPawn">La pedina non è stata aggiornata</string>
        <string name="prof_pic_updated">Foto profilo aggiornata!</string>
        <string name="file_missing">Foto mancante, riprova</string>


        <!--Per calendario-->
    <string name="material_calendar_monday">LUN</string>
    <string name="material_calendar_tuesday">MAR</string>
    <string name="material_calendar_wednesday">MER</string>
    <string name="material_calendar_thursday">GIO</string>
    <string name="material_calendar_friday">VEN</string>
    <string name="material_calendar_saturday">SAB</string>
    <string name="material_calendar_sunday">DOM</string>

    <array name="material_calendar_months_array">
        <item>GENNAIO</item>
        <item>FEBBRAIO</item>
        <item>MARZO</item>
        <item>APRILE</item>
        <item>MAGGIO</item>
        <item>GIUGNO</item>
        <item>LUGLIO</item>
        <item>AGOSTO</item>
        <item>SETTEBRE</item>
        <item>OTTOBRE</item>
        <item>NOVEMBRE</item>
        <item>DICEMBRE</item>
    </array>

</resources>