<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_fucsia_crescita"
    tools:context=".ui.grow.GrowFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asap"
        android:text="@string/weight_settings"
        android:textColor="#151414"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/obiettivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2">

    </com.google.android.material.textview.MaterialTextView>

    <ImageView
        android:id="@+id/refreshgrow2"
        android:layout_width="28dp"
        android:layout_height="29dp"
        android:background="#00FF0000"
        android:foreground="@drawable/exchange"
        android:foregroundTint="#000000"
        android:foregroundTintMode="src_in"
        android:src="@drawable/exchange"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toEndOf="@+id/text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <ImageView
        android:id="@+id/refreshgrow1"
        android:layout_width="28dp"
        android:layout_height="29dp"
        android:background="#00FF0000"
        android:foreground="@drawable/exchange"
        android:foregroundTint="#000000"
        android:foregroundTintMode="src_in"
        android:src="@drawable/exchange"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/materialTextView2"
        app:layout_constraintTop_toBottomOf="@+id/graph" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asap"
        android:text="Grafico obiettivo"

        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="363dp"
        android:layout_height="293dp"
        android:background="#D076DF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asap"
        android:text="Ultimi 15 giorni"
        android:textColor="#151414"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph"
        app:layout_constraintVertical_bias="0.22000003">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asap"
        android:text="02.01.2021"
        android:textColor="#020202"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/obiettivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialTextView"
        app:layout_constraintTop_toBottomOf="@+id/refreshgrow1">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/obiettivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asap"
        android:padding="20dp"
        android:text="@string/ob_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F6F3F3"
        app:cornerRadius="5dp"
        app:iconSize="4dp"
        app:layout_constraintBottom_toTopOf="@+id/sveglia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sveglia"
        android:layout_width="311dp"
        android:layout_height="113dp"
        android:fontFamily="@font/asap"
        android:padding="20dp"
        android:text="@string/clock_settings"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F6F3F3"
        app:cornerRadius="5dp"
        app:icon="@drawable/clock"
        app:iconPadding="20dp"
        app:iconSize="50dp"
        app:iconTint="#090909"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph"
        app:layout_constraintVertical_bias="0.96">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>